# ELT_olist

./: README.md
great_expectations/: ge_olist_raw.py
olist_dagster/: pyproject.toml
olist_dagster/olist_dagster_tests/: test_assets.py
olist_transform/: .user.yml  dbt_project.yml  package-lock.yml
olist_transform/models/marts/: mart_rfm_scores.sql
olist_transform/models/staging/: sources.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
