[project]
name = "olist_dagster"
version = "0.1.0"
description = "Dagster orchestration for the Olist ELT pipeline"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "python-dotenv",
    "google-cloud-bigquery",
    "db-dtypes",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "olist_dagster.definitions"
code_location_name = "olist_dagster"

[tool.setuptools.packages.find]
exclude = ["olist_dagster_tests"]
